homework/11-18-2025/3-igw.tf
#https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.southpawsat.id

  tags = {
    Name = "The-gateway"
  }
}
